# napoli-rust

./: .gitignore  .mob  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  Makefile  README.md  apply-migrations.sh  flake.nix  generate-entities.sh  install-build-dependencies.sh  new-migration.sh  rust-toolchain.toml  shell.nix
.github/workflows/: rust.yml
devops/webhook/: hooks.json
devops/webhook/deploy-napoli/: deploy-napoli.sh
docs/: 20241126-restaurant-menu-datatype.md  Untitled-2024-10-22-1443.excalidraw  architecture-excalidraw.json
docs/worklogs/: 20250217-error-handling-and-validation-state.md
napoli-client-grpc-web/: Cargo.toml  example-grpc-web-request.sh
napoli-client-grpc-web/src/: main.rs
napoli-lib/: .gitignore  Cargo.toml  build.rs
napoli-lib/proto/: comms.proto  models.proto
napoli-lib/src/: lib.rs  limits.rs  main.rs  millicents.rs
napoli-pain/: .gitignore  .htaccess  Cargo.toml  README.md  Trunk.toml  index.html  input.css  tailwind.config.js
napoli-pain/src/: homepage.rs  main.rs  orderlistitem.rs  router.rs  service.rs
napoli-pain/src-napoli-app/: Cargo.toml  tauri.conf.json
napoli-pain/src-napoli-app/icons/: icon.icns
napoli-pain/src-napoli-app/src/: main.rs
napoli-pain/src/components/: homepage.rs  mod.rs  new_order_form.rs  order_details.rs  order_list.rs  orderdetails.rs  server_name.rs  toast.rs
napoli-pain/src/components/order_details/: add_order_entry_form.rs  live_streaming_indicator.rs  mod.rs  order_details.rs
napoli-pain/src/components/order_list/: mod.rs  order_list.rs  order_list_item.rs
napoli-pain/src/components/orderdetails/: add_order_entry_form.rs  mod.rs  orderdetails.rs
napoli-pain/src/components/orderlist/: mod.rs  orderlist.rs  orderlistitem.rs
napoli-server/: .gitignore  Cargo.toml
napoli-server-migrations/: Cargo.toml
napoli-server-migrations/src/: lib.rs  m20220101_000001_create_table.rs  m20230206_005125_rename_order_state_to_state.rs  m20230206_005235_order_entry_add_price.rs  m20230425_2051_price.rs  m20241126_202903_add_date_to_order.rs  m20250203_200826_throw_away_long_strings.rs  main.rs
napoli-server-persistent-entities/: Cargo.toml
napoli-server-persistent-entities/src/: lib.rs  order.rs  order_entry.rs  prelude.rs
napoli-server/src/: client.rs  errors.rs  main.rs  model_adapters.rs  order_repository.rs  server.rs  validate.rs
resources/: pizza.afdesign
