[package]
name = "napoli-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"
tonic = { version = "0.8.3", default-features = false, features = ["codegen", "prost"] }

[build-dependencies]
prost-build = { version = "0.11" }
tonic-build = { version = "0.8.3" , default-features = false, features = ["prost"] }
