[package]
name = "napoli-pain"
version = "0.1.0"
edition = "2021"
authors = ["Hans Acker"]
license = "Cornell-Lossless-JPEG"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0"
js-sys = "0"
yew = { version = "0", features = ["csr"] }
wasm-bindgen = "0"