[package]
name = "napoli-pain"
version = "0.1.0"
edition = "2021"
authors = ["Hans Acker"]
license = "Cornell-Lossless-JPEG"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0"
js-sys = "0"
yew = { version = "0", features = ["csr"] }
yew-router = "0"
wasm-bindgen = "0.2.93"
napoli-lib = { path = "../napoli-lib" }
getrandom = { version = "0", features = ["js"] }
bytes = "0"
prost = "0"
tonic-web-wasm-client = "0.3"
tonic = { version = "0.8.3", default-features = false, features = [
    "codegen",
    "prost",
] }
web-sys = "0"
futures = "0.3.28"
human-sort = "*"
