[package]
name = "napoli-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
tokio = { version = "1.9.0", features = ["full"] }
napoli-lib = { path = "../napoli-lib" }
tonic-reflection = "0.6.0"

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"
