[package]
name = "napoli-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
tokio = { version = "1.9.0", features = ["full"] }
napoli-lib = { path = "../napoli-lib" }
napoli-server-migrations = { path = "../napoli-server-migrations" }
napoli-server-persistent-entities = { path = "../napoli-server-persistent-entities" }
tonic-reflection = "0.6.0"
sea-orm = { version = "^0.10.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
futures = "0.3.25"



# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"
