[package]
name = "napoli-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
tonic-reflection = "0.6.0"
sea-orm = { version = "0.11.3", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
napoli-lib = { path = "../napoli-lib" }
napoli-server-migrations = { path = "../napoli-server-migrations" }
napoli-server-persistent-entities = { path = "../napoli-server-persistent-entities" }
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
tonic-web = "0.5.0"
tower-http = "0"
http = "0"
tokio-stream = { version = "0.1.14", features = ["sync"] }

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"
